No stubbed mock

--- a/.rubocop.base.yml
+++ b/.rubocop.base.yml
@@ -232,6 +232,9 @@ RSpec/SortMetadata:
 RSpec/SubjectDeclaration:
   Enabled: true
 
+RSpec/StubbedMock:
+  Enabled: false
+
 RSpec/VerifiedDoubleReference:
   Enabled: true
 
