--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,8 @@ inherit_from:
   - .rubocop.rails.yml
 
 AllCops:
-  TargetRubyVersion: 3.1
+  SuggestExtensions: false
+  TargetRubyVersion: 3.2
   NewCops: enable
   Include:
     - !ruby/regexp /\.rb$/
