Disable numeric Iiteral underscores
Disable requiring using underscores as thousands separator

--- a/.rubocop.base.yml
+++ b/.rubocop.base.yml
@@ -176,6 +176,9 @@ Style/NumberedParameters:
 Style/NumberedParametersLimit:
   Enabled: true
 
+Style/NumericLiterals:
+  Enabled: false
+
 Style/ObjectThen:
   Enabled: true
 
