ignore .ruby-lsp/ dir

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,5 @@ AllCops:
     - !ruby/regexp /\.gemspec$/
     - !ruby/regexp /\.rake$/
     - !ruby/regexp /Rakefile$/
+  Exclude:
+    - '.ruby-lsp/**/*'
