ok... i _think_ it works now! we had to change a lot, because rubocop-rspec ejected capybara, factorybot, and rails cops as separate gems in v3. woof

--- a/.rubocop.base.yml
+++ b/.rubocop.base.yml
@@ -1,5 +1,10 @@
-require:
+plugins:
   - rubocop-rspec
+  - rubocop-capybara
+  - rubocop-factory_bot
+  - rubocop-rails
+  - rubocop-rspec
+  - rubocop-rspec_rails
 
 Gemspec/DeprecatedAttributeAssignment:
   Enabled: true
