--- a/.rubocop.rspec_3_plus.base.yml
+++ b/.rubocop.rspec_3_plus.base.yml
@@ -1,5 +1,10 @@
-require:
+plugins:
   - rubocop-rspec
+  - rubocop-capybara
+  - rubocop-factory_bot
+  - rubocop-rails
+  - rubocop-rspec
+  - rubocop-rspec_rails
 
 Gemspec/DeprecatedAttributeAssignment:
   Enabled: true
