--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,14 +8,18 @@ jobs:
   test:
     name: Lint
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        rspec_version: ['pre_3', '3_plus']
     steps:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
 
-      - name: Build Docker image
+      - name: Build Docker image - ${{ matrix.respec_version }}
+        working-directory: ${{ matrix.rspec_version == 'pre_3' && '.' || 'rspec_3_plus' }}
         run: make init
 
-      - name: Run linter
+      - name: Run linter - ${{ matrix.respec_version }}
+        working-directory: ${{ matrix.rspec_version == 'pre_3' && '.' || 'rspec_3_plus' }}
         run: make rubocop
