--- a/rspec_3_plus/docker-compose.yml
+++ b/rspec_3_plus/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   dryer-lint:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ../Dockerfile
       args:
-        - RUBY_VERSION=3.1
+        - RUBY_VERSION=3.4
     volumes:
       - type: bind
         source: .
