--- a/rspec_3_plus/.rubocop.base.yml
+++ b/rspec_3_plus/.rubocop.base.yml
@@ -3,6 +3,7 @@ plugins:
   - rubocop-capybara
   - rubocop-factory_bot
   - rubocop-rails
+  - rubocop-rake
   - rubocop-rspec
   - rubocop-rspec_rails
 
