--- a/rspec_3_plus/Gemfile
+++ b/rspec_3_plus/Gemfile
@@ -8,5 +8,6 @@ gem 'rubocop', '~> 1.81'
 gem 'rubocop-capybara', '~> 2.22'
 gem 'rubocop-factory_bot', '~> 2.27'
 gem 'rubocop-rails', '>= 2.33'
+gem 'rubocop-rake', '~> 0.7'
 gem 'rubocop-rspec', '~> 3.5'
 gem 'rubocop-rspec_rails', '~> 2.31'
