--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,16 +2,24 @@ name: Lint
 on:
   push:
 
+permissions: {}
+
 jobs:
   test:
     name: Lint
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        rspec_version: ['pre_rspec_3', 'rspec_3_plus']
     steps:
       - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
-      - name: Build Docker image
-        run: docker compose build
+      - name: Build Docker image - ${{ matrix.respec_version }}
+        working-directory: ${{ matrix.rspec_version == 'pre_rspec_3' && '.' || matrix.rspec_version }}
+        run: make init
 
-      - name: Run linter
-        run: docker compose run dryer-lint
+      - name: Run linter - ${{ matrix.respec_version }}
+        working-directory: ${{ matrix.rspec_version == 'pre_rspec_3' && '.' || matrix.rspec_version }}
+        run: make rubocop
